--- a/docs/build.gradle
+++ b/docs/build.gradle
@@ -18,6 +18,8 @@ apply plugin: 'elasticsearch.rest-resources'
 ext.docsFileTree = fileTree(projectDir) {
   // include '**/*.asciidoc'
   include '**/*.md'
+  // include 'reference/query-languages/eql.md'
+  // include 'reference/elasticsearch/mapping-reference/flattened.md'
   // That is where the snippets go, not where they come from!
   exclude 'build/**'
   exclude 'build-idea/**'
@@ -29,6 +31,10 @@ ext.docsFileTree = fileTree(projectDir) {
   // These files simply don't pass yet. We should figure out how to fix them.
   exclude 'reference/watcher/reference/actions.asciidoc'
   exclude 'reference/rest-api/security/ssl.asciidoc'
+  exclude 'reference/scripting-languages/painless/**'
+  exclude '**/*painless**/*'
+  exclude '**/*painless*'
+
   if (buildParams.inFipsJvm) {
     // We don't support this component in FIPS 140
     exclude 'reference/ingest/processors/attachment.asciidoc'
@@ -37,29 +43,105 @@ ext.docsFileTree = fileTree(projectDir) {
   }
 
   //
-  exclude 'reference/query-languages/query-dsl-script-score-query.md'
-  exclude 'reference/query-languages/query-dsl-knn-query.md'
+  // exclude 'reference/query-languages/query-dsl-script-score-query.md'
+  // exclude 'reference/query-languages/query-dsl-knn-query.md'
+  // // exclude 'reference/elasticsearch/rest-apis/sort-search-results.md'
+
+  // // // test commands in wrong place
+  // exclude 'reference/data-analysis/text-analysis/analysis-lang-analyzer.md'
+  // exclude 'reference/data-analysis/aggregations/search-aggregations-bucket-diversified-sampler-aggregation.md'
+  // exclude 'reference/elasticsearch/rest-apis/reciprocal-rank-fusion.md'
+  // exclude 'reference/elasticsearch/rest-apis/retrieve-inner-hits.md'
+  // exclude 'reference/aggregations/search-aggregations-bucket-diversified-sampler-aggregation.md'
+
+  // // // escape regex
+  // exclude 'reference/elasticsearch/rest-apis/search-suggesters.md'
+  // exclude 'reference/elasticsearch/rest-apis/search-multiple-data-streams-indices.md'
+  // exclude 'reference/elasticsearch/mapping-reference/text.md'
+  // exclude 'reference/elasticsearch/mapping-reference/ip.md'
+  // exclude 'reference/elasticsearch/mapping-reference/mapping-source-field.md'
+  // exclude 'reference/elasticsearch/mapping-reference/*.md'
+
+  // // test continued at the top
   // exclude 'reference/elasticsearch/rest-apis/sort-search-results.md'
+  // exclude 'reference/query-languages/query-dsl/query-dsl-knn-query.md'
 
-  // // test commands in wrong place
-  exclude 'reference/data-analysis/text-analysis/analysis-lang-analyzer.md'
-  exclude 'reference/data-analysis/aggregations/search-aggregations-bucket-diversified-sampler-aggregation.md'
-  exclude 'reference/elasticsearch/rest-apis/reciprocal-rank-fusion.md'
-  exclude 'reference/elasticsearch/rest-apis/retrieve-inner-hits.md'
+  // // NOTCONSOLE dropped
+  // exclude 'reference/data-analysis/aggregations/search-aggregations-bucket-geohashgrid-aggregation.md' // line 194
 
-  // // escape regex
+  // new
+
+  // TESTSETUP wrong place
+  exclude 'reference/query-languages/query-dsl/query-dsl-script-score-query.md'
   exclude 'reference/elasticsearch/rest-apis/search-suggesters.md'
-  exclude 'reference/elasticsearch/rest-apis/search-multiple-data-streams-indices.md'
-  exclude 'reference/elasticsearch/mapping-reference/text.md'
-  exclude 'reference/elasticsearch/mapping-reference/ip.md'
-  exclude 'reference/elasticsearch/mapping-reference/mapping-source-field.md'
-  exclude 'reference/elasticsearch/mapping-reference/*.md'
 
-  // test continued at the top
+  // TEST[continued] wrong place
+  exclude 'reference/query-languages/query-dsl/query-dsl-knn-query.md'
   exclude 'reference/elasticsearch/rest-apis/sort-search-results.md'
 
-  // NOTCONSOLE dropped
-  exclude 'reference/data-analysis/aggregations/search-aggregations-bucket-geohashgrid-aggregation.md' // line 194
+  // MISSINGS:
+  exclude 'reference/search-connectors/es-dls-e2e-guide.md'
+  exclude 'reference/search-connectors/es-connectors-zoom.md'
+  exclude 'reference/search-connectors/es-connectors-teams.md'
+  exclude 'reference/search-connectors/es-connectors-slack.md'
+  exclude 'reference/search-connectors/es-connectors-sharepoint.md'
+  exclude 'reference/search-connectors/es-connectors-sharepoint-online.md'
+  exclude 'reference/search-connectors/es-connectors-servicenow.md'
+  exclude 'reference/search-connectors/es-connectors-salesforce.md'
+  exclude 'reference/search-connectors/es-connectors-s3.md'
+  exclude 'reference/search-connectors/es-connectors-postgresql.md'
+  exclude 'reference/search-connectors/es-connectors-outlook.md'
+  exclude 'reference/search-connectors/es-connectors-oracle.md'
+  exclude 'reference/search-connectors/es-connectors-onedrive.md'
+  exclude 'reference/search-connectors/es-connectors-notion.md'
+  exclude 'reference/search-connectors/es-connectors-network-drive.md'
+  exclude 'reference/search-connectors/es-connectors-mysql.md'
+  exclude 'reference/search-connectors/es-connectors-ms-sql.md'
+  exclude 'reference/search-connectors/es-connectors-mongodb.md'
+  exclude 'reference/search-connectors/es-connectors-jira.md'
+  exclude 'reference/search-connectors/es-connectors-gmail.md'
+  exclude 'reference/search-connectors/es-connectors-github.md'
+  exclude 'reference/search-connectors/es-connectors-dropbox.md'
+  exclude 'reference/search-connectors/es-connectors-confluence.md'
+  exclude 'reference/search-connectors/es-connectors-box.md'
+  exclude 'reference/search-connectors/es-connectors-azure-blob.md'
+  exclude 'reference/query-languages/query-dsl/query-dsl-knn-query.md'
+  exclude 'reference/query-languages/eql/eql-ex-threat-detection.md'
+  exclude 'reference/elasticsearch/rest-apis/sort-search-results.md'
+  exclude 'reference/elasticsearch/rest-apis/shard-request-cache.md'
+  exclude 'reference/elasticsearch/rest-apis/search-suggesters.md'
+  exclude 'reference/elasticsearch/rest-apis/search-rank-eval.md'
+  exclude 'reference/elasticsearch/rest-apis/search-profile.md'
+  exclude 'reference/elasticsearch/rest-apis/retrievers.md'
+  exclude 'reference/elasticsearch/rest-apis/retrieve-inner-hits.md'
+  exclude 'reference/elasticsearch/mapping-reference/text.md'
+  exclude 'reference/elasticsearch/mapping-reference/geo-point.md'
+  exclude 'reference/aggregations/search-aggregations-pipeline-avg-bucket-aggregation.md'
+  exclude 'reference/aggregations/search-aggregations-metrics-sum-aggregation.md'
+  exclude 'reference/aggregations/search-aggregations-metrics-scripted-metric-aggregation.md'
+  exclude 'reference/aggregations/search-aggregations-bucket-geohashgrid-aggregation.md'
+
+  // not sure, fails on run
+  exclude 'reference/scripting-languages/painless/painless-runtime-fields-context.md'
+
+  // not investigated
+  exclude 'reference/query-languages/query-dsl/query-dsl-geo-grid-query.md'
+
+  // This one... the whole testsetup block is still in asciidoc comment format, along with [source,js] tag (which seems to be wrong)
+  // It looks like this one didn't get converted when converting from asciidoc
+  // And doing a search for something like `% PUT /` reveals tons more
+  exclude 'reference/aggregations/search-aggregations-bucket-multi-terms-aggregation.md'
+
+  // Read additional excludes from a file
+  // This is just for iterating quickly.. Adding them here avoids having to recompile a bunch of stuff on changes
+  def additionalExcludes = file('excludes.txt')
+  if (additionalExcludes.exists()) {
+    additionalExcludes.eachLine { line ->
+      if (line.trim().length() > 0 && !line.startsWith('#')) {
+        exclude line.trim()
+      }
+    }
+  }
 }
 
 tasks.named("yamlRestTest") {
@@ -74,35 +156,37 @@ tasks.named("yamlRestTest") {
 
 /* List of files that have snippets that will not work until platinum tests can occur ... */
 tasks.named("buildRestTests").configure {
-  // enabled = false
+//   // enabled = false
   getExpectedUnconvertedCandidates().addAll(
-          // 'reference/ml/anomaly-detection/ml-configuring-transform.asciidoc',
-          // 'reference/ml/anomaly-detection/apis/delete-calendar-event.asciidoc',
-          // 'reference/ml/anomaly-detection/apis/get-bucket.asciidoc',
-          // 'reference/ml/anomaly-detection/apis/get-category.asciidoc',
-          // 'reference/ml/anomaly-detection/apis/get-influencer.asciidoc',
-          // 'reference/ml/anomaly-detection/apis/get-job-stats.asciidoc',
-          // 'reference/ml/anomaly-detection/apis/get-job.asciidoc',
-          // 'reference/ml/anomaly-detection/apis/get-overall-buckets.asciidoc',
-          // 'reference/ml/anomaly-detection/apis/get-record.asciidoc',
-          // 'reference/ml/anomaly-detection/apis/get-snapshot.asciidoc',
-          // 'reference/ml/anomaly-detection/apis/post-data.asciidoc',
-          // 'reference/ml/anomaly-detection/apis/revert-snapshot.asciidoc',
-          // 'reference/ml/anomaly-detection/apis/update-snapshot.asciidoc',
-          // 'reference/ml/anomaly-detection/apis/update-job.asciidoc',
-          // 'reference/security/authentication/user-cache.asciidoc',
-          // 'reference/security/authorization/run-as-privilege.asciidoc',
-          // 'reference/security/ccs-clients-integrations/http.asciidoc',
-          // 'reference/rest-api/watcher/put-watch.asciidoc',
-          // 'reference/rest-api/watcher/stats.asciidoc',
-          // 'reference/watcher/example-watches/watching-time-series-data.asciidoc'
-          'reference/elasticsearch-plugins/analysis-nori-speech.md',
-          'reference/elasticsearch-plugins/cloud/ec-plugins-guide.md',
-          'reference/elasticsearch-plugins/discovery-ec2-usage.md',
-          'reference/elasticsearch-plugins/mapper-annotated-text-usage.md',
-          'reference/elasticsearch/configuration-reference/elastic-cloud-serverless-elasticsearch-settings.md',
-          'reference/ingestion-tools/search-connectors/es-connectors-mongodb.md',
-          'reference/ingestion-tools/search-connectors/es-dls-e2e-guide.md',
+//           // 'reference/ml/anomaly-detection/ml-configuring-transform.asciidoc',
+//           // 'reference/ml/anomaly-detection/apis/delete-calendar-event.asciidoc',
+//           // 'reference/ml/anomaly-detection/apis/get-bucket.asciidoc',
+//           // 'reference/ml/anomaly-detection/apis/get-category.asciidoc',
+//           // 'reference/ml/anomaly-detection/apis/get-influencer.asciidoc',
+//           // 'reference/ml/anomaly-detection/apis/get-job-stats.asciidoc',
+//           // 'reference/ml/anomaly-detection/apis/get-job.asciidoc',
+//           // 'reference/ml/anomaly-detection/apis/get-overall-buckets.asciidoc',
+//           // 'reference/ml/anomaly-detection/apis/get-record.asciidoc',
+//           // 'reference/ml/anomaly-detection/apis/get-snapshot.asciidoc',
+//           // 'reference/ml/anomaly-detection/apis/post-data.asciidoc',
+//           // 'reference/ml/anomaly-detection/apis/revert-snapshot.asciidoc',
+//           // 'reference/ml/anomaly-detection/apis/update-snapshot.asciidoc',
+//           // 'reference/ml/anomaly-detection/apis/update-job.asciidoc',
+//           // 'reference/security/authentication/user-cache.asciidoc',
+//           // 'reference/security/authorization/run-as-privilege.asciidoc',
+//           // 'reference/security/ccs-clients-integrations/http.asciidoc',
+//           // 'reference/rest-api/watcher/put-watch.asciidoc',
+//           // 'reference/rest-api/watcher/stats.asciidoc',
+//           // 'reference/watcher/example-watches/watching-time-series-data.asciidoc'
+            'reference/elasticsearch-plugins/analysis-nori-speech.md',
+            'reference/elasticsearch-plugins/cloud/ec-plugins-guide.md',
+            'reference/elasticsearch-plugins/discovery-ec2-usage.md',
+            // 'reference/elasticsearch-plugins/mapper-annotated-text-usage.md',
+            'reference/enrich-processor/date-processor.md',
+//           // 'reference/elasticsearch/configuration-reference/elastic-cloud-serverless-elasticsearch-settings.md',
+//           // 'reference/aggregations/search-aggregations-bucket-geohashgrid-aggregation.md',
+//           // 'reference/search-connectors/es-connectors-mongodb.md',
+//           // 'reference/search-connectors/es-dls-e2e-guide.md',
   )
 }
 
